	   	Enhancement wrt. reference program: color,size,angle,etc 
	   	of text are vectors. FONT and TEXT_AXES not supported.
           - CONTOUR: Support of all options except CELL_FILL, C_ANNOTATIONS, CLOSED, DOWNHILL,
               IRREGULAR, TRIANGULATION,PATH_***
               Correct implementation of Z, [X,Y], i.e., contours may be skewed,
	       rotated, etc depending on X and Y.
               Better than IDL:
               - a new ZLOG option makes log contours as well.
               - C_ORIENTATION, C_SPACING are also vectors.
               - log axes give better results
               - good contouring of Not-A-Number values in Z and MIN_VALUE/MAX_VALUE
               - CLIPPING ok.
               - Automatic limits in some cases still different from IDL.
           - AXIS and boxes in plots: all [XYZ]TICK[***] options supported except TICKV
	   	and a few TICKFORMAT specifics.
           - CURSOR: full support for CURSOR command, which is interruptible by control-c 
	   	and has all the options.
           - SURFACE: all Keywords supported except "LEGO" and "CHANNEL".
           - Added SHADE_SURF (slow and imperfect shading from the plplot library).
           - Added cursor-related functions TVCRS and command EMPTY. 
           - Added DEVICE options CURSOR_CROSSHAIR, CURSOR_STANDARD, CURSOR_ORIGINAL and 
	   	GET/SET_GRAPHICS_FUNCTION (GXoR, GXand, etc). 
           - Disabled by default the focus in the X11 graphics windows as IDL does and 
	   	repositioned WINDOWS by default to top-right of screen. Screen size and behaviour
                using GDL_GR_X_WIDTH, GDL_GR_Y_WIDTH and GDL_GR_X_QSCREEN environment variables (X window)
                (GDL_GR_WIN_WIDTH, GDL_GR_WIN_WIDTH and GDL_GR_WIN_QSCREEN under windows)
           - WSHOW works irregularly, depending on the window manager.


0.9.5:
           - lot of improvments in Widgets related code
           - TIC and TOC
           - adding !Const