@@ -623,3 +623,6 @@
            - lot of improvments in Widgets related code
            - TIC and TOC
            - adding !Const
+           - initial import of NetCDF-4 related codes:
+             NCDF_GROUPSINQ, NCDF_GROUPNAME, NCDF_GROUPDEF, NCDF_FULLGROUPNAME,
+             NCDF_GROUPPARENT, NCDF_DIMIDSINQ, NCDF_NCIDINQ, NCDF_VARIDSINQ
